# gitlab-project-manager

./: Cargo.toml  LICENSE  README.md  config.sample.yaml
src/: config.rs  main.rs
