[package]
name = "gitlab-pm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
serde_yaml = "0.8"
gitlab = "0.1410.0"